--- a/src/components/product/styles.css
+++ b/src/components/product/styles.css
@@ -1,6 +1,4 @@
-#app {
-  height: 100%;
-}
+#app { height: 100% }
 html,
 body {
   position: relative;
@@ -18,7 +16,7 @@ body {
 
 .swiper {
   width: 100%;
-  height: 500px;
+  height: 100%;
 }
 
 .swiper-slide {
@@ -48,14 +46,47 @@ body {
   object-fit: cover;
 }
 
-.swiper-button-next,
-.swiper-button-prev {
-  color: #fff;
+body {
+  background: #000;
+  color: #000;
 }
 
+.swiper {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .swiper-slide {
   background-size: cover;
   background-position: center;
-  height: 600px;
+}
+
+.mySwipers {
+  height: 60%;
+  width: 100%;
+}
+
+.myswiper {
+  height: 20%;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.myswiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+.myswiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height:100%;
+  object-fit: cover;
 }
