--- a/src/styles/css/App.scss
+++ b/src/styles/css/App.scss
@@ -1,225 +1,226 @@
-* {
-  margin: 0;
-  padding: 0;
+*{
+	box-sizing:border-box;
 }
-$Raleway: "Raleway", sans-serif;
-
-body {
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  font-family: $Raleway;
-  position: relative;
-  background: #333;
+body{
+	background-color:#abd9e9;
+	font-family:Arial;
 }
-
-.slider_title {
-  font-size: 5vw;
-  color: tomato;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 2vw;
+#container{
+	width:750px;
+	height:800px;
+	background:#eff3f7;
+	margin:0 auto;
+	font-size:0;
+	border-radius:5px;
+	overflow:hidden;
 }
-.card-wrapper {
-  position: relative;
-  width: 100%;
-  padding: 0 10px;
-  box-sizing: border-box;
-  &:active,
-  &:hover,
-  &:focus {
-    outline: none;
-    border: none;
-  }
-} //card-wrapper
-
-.card {
-  width: 100%;
-  height: 450px;
-  border-radius: 16px;
-  overflow: hidden;
-  cursor: pointer;
-  position: relative;
-  .card-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    background-color: #000;
-    transition: 0.5s;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  } //card-image
-  &:hover {
-    img {
-      opacity: 0.4;
-      transition: 0.5s;
-    }
-    .card-image {
-      transform: translateY(-100px);
-      transition: all 0.9s;
-    }
-  }
-} //card
-
-.social-icons {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 3;
-  display: flex;
-  li {
-    list-style: none;
-    a {
-      position: relative;
-      display: block;
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
-      text-align: center;
-      background: #fff;
-      font-size: 23px;
-      color: #333;
-      font-weight: bold;
-      margin: 0 6px;
-      transition: 0.4s;
-      transform: translateY(200px);
-      opacity: 0;
-    }
-  }
-} //social-icons
-
-.card:hover {
-  .social-icons li a {
-    transform: translateY(0px);
-    opacity: 1;
-  }
+aside{
+	width:260px;
+	height:800px;
+	background-color:#3b3e49;
+	display:inline-block;
+	font-size:15px;
+	vertical-align:top;
 }
-.social-icons li a:hover {
-  background: #000;
-  transition: 0.2s;
-  .fa {
-    color: #fff;
-  }
-}
-.social-icons li a .fa {
-  transition: 0.8s;
-  &:hover {
-    transform: rotateY(360deg);
-    color: #fff;
-  }
+main{
+	width:490px;
+	height:800px;
+	display:inline-block;
+	font-size:15px;
+	vertical-align:top;
 }
 
-.card:hover li:nth-child(1) a {
-  transition-delay: 0.1s;
+aside header{
+	padding:30px 20px;
 }
-.card:hover li:nth-child(2) a {
-  transition-delay: 0.2s;
+aside input{
+	width:100%;
+	height:50px;
+	line-height:50px;
+	padding:0 50px 0 20px;
+	background-color:#5e616a;
+	border:none;
+	border-radius:3px;
+	color:#fff;
+	background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_search.png);
+	background-repeat:no-repeat;
+	background-position:170px;
+	background-size:40px;
 }
-.card:hover li:nth-child(3) a {
-  transition-delay: 0.3s;
+aside input::placeholder{
+	color:#fff;
 }
-.card:hover li:nth-child(4) a {
-  transition-delay: 0.4s;
+aside ul{
+	padding-left:0;
+	margin:0;
+	list-style-type:none;
+	overflow-y:scroll;
+	height:690px;
 }
-.details {
-  position: absolute;
-  bottom: 400px;
-  left: 0;
-  background: #fff;
-  width: 100%;
-  height: 120px;
-  z-index: 1;
-  padding: 10px;
-  transition: 0.6s;
-  h2 {
-    margin: 30px 0;
-    padding: 0;
-    text-align: center;
-    .job-title {
-      font-size: 16px;
-      line-height: 2;
-      color: #333;
-      font-weight: 300;
-      display: block;
-    }
-  }
+aside li{
+	padding:10px 0;
+}
+aside li:hover{
+	background-color:#5e616a;
+}
+h2,h3{
+	margin:0;
+}
+aside li img{
+	border-radius:50%;
+	margin-left:20px;
+	margin-right:8px;
+}
+aside li div{
+	display:inline-block;
+	vertical-align:top;
+	margin-top:12px;
+}
+aside li h2{
+	font-size:14px;
+	color:#fff;
+	font-weight:normal;
+	margin-bottom:5px;
+}
+aside li h3{
+	font-size:12px;
+	color:#7e818a;
+	font-weight:normal;
 }
 
-.card:hover {
-  .details {
-    bottom: 0;
-  }
+.status{
+	width:8px;
+	height:8px;
+	border-radius:50%;
+	display:inline-block;
+	margin-right:7px;
+}
+.green{
+	background-color:#58b666;
+}
+.orange{
+	background-color:#ff725d;
+}
+.blue{
+	background-color:#6fbced;
+	margin-right:0;
+	margin-left:7px;
 }
 
-.carousel {
-  .slick-dots {
-    bottom: -2.5vw;
-    li {
-      button {
-        width: 20px;
-        height: 20px;
-        border: 1px solid #fff;
-        border-radius: 20px;
-        &:before {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          width: 10px;
-          height: 10px;
-          border-radius: 10px;
-          content: "";
-          text-align: center;
-          opacity: 0.5;
-          color: #000;
-          background-color: #fff;
-          transform: translate(-50%, -50%);
-          transition: all 0.3s ease-in-out;
-        }
-      }
-      &.slick-active,
-      &:hover {
-        button {
-          border-color: tomato;
-          &:before {
-            background-color: tomato;
-            opacity: 1;
-          }
-        }
-      }
-    }
-  }
+main header{
+	height:110px;
+	padding:30px 20px 30px 40px;
+}
+main header > *{
+	display:inline-block;
+	vertical-align:top;
+}
+main header img:first-child{
+	border-radius:50%;
+}
+main header img:last-child{
+	width:24px;
+	margin-top:8px;
+}
+main header div{
+	margin-left:10px;
+	margin-right:145px;
+}
+main header h2{
+	font-size:16px;
+	margin-bottom:5px;
+}
+main header h3{
+	font-size:14px;
+	font-weight:normal;
+	color:#7e818a;
+}
 
-  .slick-prev,
-  .slick-next {
-    width: 50px;
-    height: 50px;
-    background-color: #fff;
-  }
-  .slick-prev:hover,
-  .slick-prev:focus,
-  .slick-next:hover,
-  .slick-next:focus {
-    color: #fff;
-    outline: none;
-    background: #fff;
-  }
-  .slick-prev:before,
-  .slick-next:before {
-    color: #000;
-    font-family: $Raleway;
-  }
-  .slick-next {
-    right: -55px;
-  }
-  .slick-prev {
-    left: -55px;
-  }
+#chat{
+	padding-left:0;
+	margin:0;
+	list-style-type:none;
+	overflow-y:scroll;
+	height:535px;
+	border-top:2px solid #fff;
+	border-bottom:2px solid #fff;
+}
+#chat li{
+	padding:10px 30px;
+}
+#chat h2,#chat h3{
+	display:inline-block;
+	font-size:13px;
+	font-weight:normal;
+}
+#chat h3{
+	color:#bbb;
+}
+#chat .entete{
+	margin-bottom:5px;
+}
+#chat .message{
+	padding:20px;
+	color:#fff;
+	line-height:25px;
+	max-width:90%;
+	display:inline-block;
+	text-align:left;
+	border-radius:5px;
+}
+#chat .me{
+	text-align:right;
+}
+#chat .you .message{
+	background-color:#58b666;
+}
+#chat .me .message{
+	background-color:#6fbced;
+}
+#chat .triangle{
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 10px 10px 10px;
+}
+#chat .you .triangle{
+		border-color: transparent transparent #58b666 transparent;
+		margin-left:15px;
+}
+#chat .me .triangle{
+		border-color: transparent transparent #6fbced transparent;
+		margin-left:375px;
+}
+
+main footer{
+	height:155px;
+	padding:20px 30px 10px 20px;
+}
+main footer textarea{
+	resize:none;
+	border:none;
+	display:block;
+	width:100%;
+	height:80px;
+	border-radius:3px;
+	padding:20px;
+	font-size:13px;
+	margin-bottom:13px;
+}
+main footer textarea::placeholder{
+	color:#ddd;
+}
+main footer img{
+	height:30px;
+	cursor:pointer;
+}
+main footer a{
+	text-decoration:none;
+	text-transform:uppercase;
+	font-weight:bold;
+	color:#6fbced;
+	vertical-align:top;
+	margin-left:333px;
+	margin-top:5px;
+	display:inline-block;
 }
