--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,290 +1,9 @@
-body{
-  background-color: #f4f7f6;
+
+body {
+  background-color: #74EBD5;
+  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+
   min-height: 100vh;
- 
-}
-.card {
-  background: #fff;
-  transition: .5s;
-  border: 0;
-  margin-bottom: 30px;
-  border-radius: .55rem;
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
-  min-height: 100vh; 
-}
-.chat-app .people-list {
-  width: 280px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  padding: 20px;
-  z-index: 7;
- min-height:100vh;
-}
-.chat{
-  padding:0px;
-  grid-template-rows:  auto 1fr auto;
-  outline: 2px solid red;
-  height:100%
-}
-
-.chat-app .chat {
-  margin-left: 280px;
-  border-left: 1px solid #eaeaea
-  
-}
-
-.people-list {
-  -moz-transition: .5s;
-  -o-transition: .5s;
-  -webkit-transition: .5s;
-  transition: .5s
-}
-
-.people-list .chat-list li {
-  padding: 10px 15px;
-  list-style: none;
-  border-radius: 3px
-}
-
-.people-list .chat-list li:hover {
-  background: #efefef;
-  cursor: pointer
-}
-
-.people-list .chat-list li.active {
-  background: #efefef
-}
-
-.people-list .chat-list li .name {
-  font-size: 15px
-}
-
-.people-list .chat-list img {
-  width: 45px;
-  border-radius: 50%
-}
-
-.people-list img {
-  float: left;
-  border-radius: 50%
-}
-
-.people-list .about {
-  float: left;
-  padding-left: 8px
-}
-
-.people-list .status {
-  color: #999;
-  font-size: 13px
-}
-
-.chat .chat-header {
-  padding: 15px 20px;
-  border-bottom: 2px solid #f4f7f6
-}
-
-.chat .chat-header img {
-  float: left;
-  border-radius: 40px;
-  width: 40px
-}
-
-.chat .chat-header .chat-about {
-  float: left;
-  padding-left: 10px;
- 
-}
-
-.messages-box,
-.chat-box {
-  /* height: 100%; */
-  overflow-y: scroll;
-}
-
-.chat .chat-history {
-  padding: 20px;
-  border-bottom: 2px solid #fff;
-  height: 100vh;
-}
-
-.chat .chat-history ul {
-  padding: 0
-}
-
-.chat .chat-history ul li {
-  list-style: none;
-  margin-bottom: 30px
-}
-
-.chat .chat-history ul li:last-child {
-  margin-bottom: 0px
-}
-
-.chat .chat-history .message-data {
-  margin-bottom: 15px
-}
-
-.chat .chat-history .message-data img {
-  border-radius: 40px;
-  width: 40px
-}
-
-.chat .chat-history .message-data-time {
-  color: #434651;
-  padding-left: 6px
-}
-
-.chat .chat-history .message {
-  color: #444;
-  padding: 18px 20px;
-  line-height: 26px;
-  font-size: 16px;
-  border-radius: 7px;
-  display: inline-block;
-  position: relative
-}
-
-.chat .chat-history .message:after {
-  bottom: 100%;
-  left: 7%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-bottom-color: #fff;
-  border-width: 10px;
-  margin-left: -10px
-}
-
-.chat .chat-history .my-message {
-  background: #efefef
-}
-
-.chat .chat-history .my-message:after {
-  bottom: 100%;
-  left: 30px;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-bottom-color: #efefef;
-  border-width: 10px;
-  margin-left: -10px
-}
-
-.chat .chat-history .other-message {
-  background: #e8f1f3;
-  text-align: right
-}
-
-.chat .chat-history .other-message:after {
-  border-bottom-color: #e8f1f3;
-  left: 93%
-}
-
-.chat .chat-message {
-  display:flex;
-  padding: 20px;
-  justify-content: flex-end;
-
-  
-}
-
-
-
-
-.online,
-.offline,
-.me {
-  margin-right: 2px;
-  font-size: 8px;
-  vertical-align: middle
-}
-
-.online {
-  color: #86c541
-}
-
-.offline {
-  color: #e47297
-}
-
-.me {
-  color: #1d8ecd
-}
-
-.float-right {
-  float: right
-}
-
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: " ";
-  clear: both;
-  height: 0
-}
-
-@media only screen and (max-width: 767px) {
-  .chat-app .people-list {
-      height: 100%;
-      width: 100%;
-      overflow-x: auto;
-      background: #fff;
-      left: -400px;
-      display: none;
-      
-
-  }
-  .chat-app .people-list.open {
-      left: 0
-  }
-  .chat-app .chat {
-      margin: 0
-  }
-  .chat-app .chat .chat-header {
-      border-radius: 0.55rem 0.55rem 0 0
-  }
-  .chat-app .chat-history {
-      height: 300px;
-      overflow-x: auto
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .chat-app .chat-list {
-      height: 650px;
-      overflow-x: auto;
-      overflow-y: scroll
-  }
-  .chat-app .chat-history {
-      height: 600px;
-      overflow-x: auto;
-      overflow-y: scroll;
-      flex-grow: 1;
-  }
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-  .chat-app .chat-list {
-      height: 480px;
-      overflow-x: auto
-  }
-  .chat-app .chat-history {
-      height: calc(100vh - 350px);
-      overflow-x: auto;
-      overflow-y: scroll
-  }
 }
 
 ::-webkit-scrollbar {
@@ -303,11 +22,123 @@ body{
   border-radius: 1rem;
 }
 
-.input-group-text{
- height:40px;
+.text-small {
+  font-size: 0.9rem;
 }
 
-.btn{
-  margin: 2px;
+.messages-box,
+.chat-box {
+  height: 510px;
+  overflow-y: scroll;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+input::placeholder {
+  font-size: 0.9rem;
+  color: #999;
+}
+
+.hola {
+  background-color: rgb(238,238,238);
+  
+}
+
+.icons {
+  display:flex;
+  justify-content: flex-end;
+}
+
+.row img{
+  display:flex;
+  justify-content: flex-start;
+}
+
+.chat-about {
+  float: left;
+  padding-left: 10px
+}
+/*Reply*/
+
+.reply {
+  height: 60px;
+  width: 100%;
+  background-color: #f7f7f7;
+  padding: 10px 5px 10px 5px !important;
+  margin: 0 !important;
+  z-index: 1000;
+}
+
+.reply-emojis {
+  padding: 5px !important;
+}
+
+.reply-emojis i {
+  text-align: center;
+  padding: 5px 5px 5px 5px !important;
+  color: #93918f;
+  cursor: pointer;
+}
+
+.reply-recording {
+  padding: 5px !important;
+}
+
+.reply-recording i {
+  text-align: center;
+  padding: 5px !important;
+  color: #93918f;
+  cursor: pointer;
+}
+
+.reply-send {
+  padding: 5px !important;
+}
+
+.reply-send i {
+  text-align: center;
+  padding: 5px !important;
+  color: #93918f;
+  cursor: pointer;
+}
+
+.reply-main {
+  padding: 2px 5px !important;
+}
+
+.reply-main textarea {
+  width: 100%;
+  resize: none;
+  overflow: hidden;
+  padding: 5px !important;
+  outline: none;
+  border: none;
+  text-indent: 5px;
+  box-shadow: none;
+  height: 100%;
+  font-size: 16px;
+}
+
+.reply-main textarea:focus {
+  outline: none;
+  border: none;
+  text-indent: 5px;
+  box-shadow: none;
+}
+
+.heading {
+  padding: 10px 16px 10px 15px;
+  margin: 0;
+  height: 60px;
+  width: 100%;
+  background-color: #eee;
+  z-index: 1000;
+}
+
+.heading-avatar {
+  padding: 0;
+  cursor: pointer;
+
+}
