--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,11 +1,3 @@
-
-body {
-  background-color: #74EBD5;
-  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
-
-  min-height: 100vh;
-}
-
 ::-webkit-scrollbar {
   width: 5px;
 }
@@ -47,8 +39,10 @@ input::placeholder {
 }
 
 .icons {
-  display:flex;
-  justify-content: flex-end;
+  display: flex;
+  flex-direction:row-reverse;
+  top: 0;
+  
 }
 
 .row img{
@@ -141,4 +135,51 @@ input::placeholder {
   padding: 0;
   cursor: pointer;
 
+}
+
+.searchBox {
+  padding: 0 !important;
+  margin: 0 !important;
+  height: 60px;
+  width: 100%;
+}
+
+.searchBox-inner {
+  height: 100%;
+  width: 100%;
+  padding: 10px !important;
+  background-color: #fbfbfb;
+}
+
+
+/*#searchBox-inner input {
+  box-shadow: none;
+}*/
+
+.searchBox-inner input:focus {
+  outline: none;
+  border: none;
+  box-shadow: none;
+}
+.heading-name {
+  padding: 0 !important;
+  cursor: pointer;
+}
+
+.heading-name-meta {
+  font-weight: 700;
+  font-size: 100%;
+  padding: 5px;
+  padding-bottom: 0;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #000;
+  display: block;
+}
+.heading-online {
+  display: none;
+  padding: 0 5px;
+  font-size: 12px;
+  color: #93918f;
 }
