--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -184,3 +184,5 @@ input::placeholder {
   font-size: 12px;
   color: #93918f;
 }
+
+@media (max-width: 150px) { .border-sm-start-none { border-left: none !important; } }
